f-spot 0.5.0.3 - Oct 16 2008 - Blame me
---------------------------------------
- bugfix release:
  - fix a (yet another) MAJOR WTF with the duplicate detection code
  - fix subselect column names for sqlite > 3.6.0
  - fix the ChangePath extension
- updated translations

f-spot 0.5.0.2 - Oct 06 2008 - Slowing down the Planet
------------------------------------------------------
- bugfix release:
  - fix a major memory leakage on Export
  - avoid the spinning disk effect on upgrade from pre-0.5.0 versions.
  That also means duplicate detection will only work for newly imported 
  images. An extension for computing hashes on existing images will be
  available from the Extension Mamager before the end of the week.
- updated translations.

f-spot 0.5.0.1 - Sep 22 2008 - Remember the Rubik's cube
--------------------------------------------------------
- bugfix release to workaround a bug in gdk-pixbuf
- some new translations
-.desktop fixes

f-spot 0.5.0 - Sep 18 2008 - Thumbs down
----------------------------------------
- new sidebar, reworked editors (Ruben, SoC)
- color profile support (Wasja, SoC)
- duplicate detection at import (Thomas)
- reworked db interractions, with O(1) queries
- reducing and batching db access
- light-speed tagging
- FullScreen mode enhancement
- new extensions, updated docs, updated translations
- hundreds of bugfixes (Lorenzo)

f-spot 0.4.4 - May 28 2008 - Springtime
---------------------------------------
- various FullScreen enhancements: fading widgets, snapped on screen edges, ...
- rating with hotkeys: use Alt-0 to Alt-5 in browse or edit mode to rate
- reduce startup time by ~40%, depending on your db size
- push back the "sort tag by popularity" feature removed on 0.4.3.1
- choose the theme you prefer for f-spot, even switch theme without restart with gtk-sharp 2.12.2
- reduce the verbosity of the output log. use --debug for full debugging output
- migrate CDExport to gio for gnome 2.22