@@ -50,4 +50,5 @@ lib/libfspotraw/LibRaw/dcraw/dcraw.c
 lib/libfspotraw/LibRaw/internal/dcraw_common.cpp
 lib/libfspotraw/LibRaw/internal/dcraw_fileio.cpp
 lib/libfspotraw/LibRaw/internal/foveon.cpp
+lib/gtk-sharp-beans/gtk_generated/Builder.cs
 
