@@ -1,3 +1,14 @@
+f-spot 0.6.0.0 - Aug 07 2009 - Sliced
+-------------------------------------
+- no longer depends on libeog
+- fighting against deprecation, on the path to gnome3
+- new viewer widget
+- new widget showing folders organisation
+- new Preference dialog
+- db and config moved to .config (or whatever is pointed by xdg config)
+- tons of bugs fixed (really)
+- updated translations
+
 f-spot 0.5.0.3 - Oct 16 2008 - Blame me
 ---------------------------------------
 - bugfix release:
